Resolves issue none : Adds tests for NativeFunctions : Adds tests for the following methods in NativeFunctions: chmod, changeGroup, getGroupMembers, getRealName, getUserLogin, and isUserRemotelyConnected. Tests can be run by running the mainline. There are comments instructing how to verify that the tests pass. Some must be manually verified by running corresponding linux commands. Some can be verified by seeing what is printed out in the terminal. : All tests pass on department machines, and over ssh. : http://cakehat.cs.brown.edu/foodcritic/r/383/